fixed color contrasts

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -89,7 +89,7 @@ header span {
 }
 
 .navigation li {
-    color: var(--darkPurple);
+    color: var(--white);
 }
 
 .navigation li.current {
@@ -118,7 +118,7 @@ h1 {
 
 h2 {
     margin-left: 10px;
-    color: var(--lightPurple);
+    color: var(--white);
 }
 
 /* SECTION */
@@ -190,6 +190,7 @@ footer {
     background-color: var(--darkPurple);
     padding: 1rem 10px;
     text-align: center;
+    color: var(--white)
 }
 
 footer p {
